--- a/django-deployment.yaml
+++ b/django-deployment.yaml
@@ -20,6 +20,7 @@ spec:
         ports:
         - containerPort: 8000
 ---
+### SERVICES ###
 apiVersion: v1
 kind: Service
 metadata:
@@ -32,5 +33,8 @@ spec:
     - protocol: TCP
       port: 8000
       targetPort: 8000
+  # untuk LoadBalancer
   # type: LoadBalancer
+  # untuk NodePort
   type: NodePort
+  ### END SERVICES ###
